Add proguard rule.

--- a/feature/gallery/src/main/res/layout/fragment_gallery.xml
+++ b/feature/gallery/src/main/res/layout/fragment_gallery.xml
@@ -17,7 +17,8 @@
             android:layout_width="match_parent"
             android:layout_height="?attr/actionBarSize"
             app:navigationIcon="@drawable/ic_detail_back_no_circle"
-            app:title="@string/gallery_title" />
+            app:title="@string/gallery_title"
+            app:titleTextColor="@color/sunflower_white" />
 
     </com.google.android.material.appbar.AppBarLayout>
 
