Replace the buggy StaggeredGridLayoutManager with the GridLayoutManager.

--- a/feature/gallery/src/main/res/layout/fragment_gallery.xml
+++ b/feature/gallery/src/main/res/layout/fragment_gallery.xml
@@ -30,7 +30,7 @@
         android:paddingStart="@dimen/card_side_margin"
         android:paddingTop="@dimen/gallery_header_margin"
         android:paddingEnd="@dimen/card_side_margin"
-        app:layoutManager="androidx.recyclerview.widget.StaggeredGridLayoutManager"
+        app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
         app:spanCount="@integer/grid_columns"
         tools:listitem="@layout/item_photo" />
 
