Update Kotlin plugin to 1.9.20. Create Compose theme. Make links clickable in PlantDetailsFragment.

--- a/feature/plant_details/src/main/res/layout/fragment_plant_details.xml
+++ b/feature/plant_details/src/main/res/layout/fragment_plant_details.xml
@@ -131,6 +131,7 @@
                 android:layout_marginStart="@dimen/margin_small"
                 android:layout_marginTop="@dimen/margin_small"
                 android:layout_marginEnd="@dimen/margin_small"
+                android:linksClickable="true"
                 android:minHeight="@dimen/plant_description_min_height"
                 android:textIsSelectable="true"
                 app:layout_constraintEnd_toEndOf="parent"
