--- a/core/app_ui/src/main/res/drawable/ic_detail_back_no_circle.xml
+++ b/core/app_ui/src/main/res/drawable/ic_detail_back_no_circle.xml
@@ -6,6 +6,6 @@
     android:viewportHeight="32.0">
     <path
         android:name="arrow"
-        android:fillColor="@color/sunflower_white"
+        android:fillColor="?attr/colorOnSurface"
         android:pathData="M20,14.66H10.44l7.45,-7.45L16,5.33l-10.66,10.66 10.66,10.66 1.88,-1.88L10.44,17.33H26.66v-2.66z"/>
 </vector>
