--- a/core/app_ui/src/main/res/values/colors.xml
+++ b/core/app_ui/src/main/res/values/colors.xml
@@ -1,13 +1,64 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="sunflower_black">#de000000</color>
-    <color name="sunflower_gray_50">#fafafa</color>
-    <color name="sunflower_gray_50_a600">#99fafafa</color>
-    <color name="sunflower_green_300">#6dc790</color>
-    <color name="sunflower_green_500">#49bb79</color>
-    <color name="sunflower_green_700">#005d2b</color>
-    <color name="sunflower_green_900">#1a231e</color>
-    <color name="sunflower_white">#deffffff</color>
-    <color name="sunflower_yellow_300">#f8f99f</color>
-    <color name="sunflower_yellow_500">#ffff63</color>
+    <color name="seed">#6dc790</color>
+    <color name="md_theme_light_primary">#006D3F</color>
+    <color name="md_theme_light_onPrimary">#FFFFFF</color>
+    <color name="md_theme_light_primaryContainer">#95F7B9</color>
+    <color name="md_theme_light_onPrimaryContainer">#002110</color>
+    <color name="md_theme_light_secondary">#606200</color>
+    <color name="md_theme_light_onSecondary">#FFFFFF</color>
+    <color name="md_theme_light_secondaryContainer">#E7E971</color>
+    <color name="md_theme_light_onSecondaryContainer">#1C1D00</color>
+    <color name="md_theme_light_tertiary">#006D3D</color>
+    <color name="md_theme_light_onTertiary">#FFFFFF</color>
+    <color name="md_theme_light_tertiaryContainer">#88F9B1</color>
+    <color name="md_theme_light_onTertiaryContainer">#00210F</color>
+    <color name="md_theme_light_error">#BA1A1A</color>
+    <color name="md_theme_light_errorContainer">#FFDAD6</color>
+    <color name="md_theme_light_onError">#FFFFFF</color>
+    <color name="md_theme_light_onErrorContainer">#410002</color>
+    <color name="md_theme_light_background">#F8FDFF</color>
+    <color name="md_theme_light_onBackground">#001F25</color>
+    <color name="md_theme_light_surface">#F8FDFF</color>
+    <color name="md_theme_light_onSurface">#001F25</color>
+    <color name="md_theme_light_surfaceVariant">#DCE5DB</color>
+    <color name="md_theme_light_onSurfaceVariant">#414942</color>
+    <color name="md_theme_light_outline">#717971</color>
+    <color name="md_theme_light_inverseOnSurface">#D6F6FF</color>
+    <color name="md_theme_light_inverseSurface">#00363F</color>
+    <color name="md_theme_light_inversePrimary">#79DA9F</color>
+    <color name="md_theme_light_shadow">#000000</color>
+    <color name="md_theme_light_surfaceTint">#006D3F</color>
+    <color name="md_theme_light_outlineVariant">#C0C9C0</color>
+    <color name="md_theme_light_scrim">#000000</color>
+    <color name="md_theme_dark_primary">#79DA9F</color>
+    <color name="md_theme_dark_onPrimary">#00391F</color>
+    <color name="md_theme_dark_primaryContainer">#00522F</color>
+    <color name="md_theme_dark_onPrimaryContainer">#95F7B9</color>
+    <color name="md_theme_dark_secondary">#CACC58</color>
+    <color name="md_theme_dark_onSecondary">#313200</color>
+    <color name="md_theme_dark_secondaryContainer">#484A00</color>
+    <color name="md_theme_dark_onSecondaryContainer">#E7E971</color>
+    <color name="md_theme_dark_tertiary">#6CDC97</color>
+    <color name="md_theme_dark_onTertiary">#00391D</color>
+    <color name="md_theme_dark_tertiaryContainer">#00522D</color>
+    <color name="md_theme_dark_onTertiaryContainer">#88F9B1</color>
+    <color name="md_theme_dark_error">#FFB4AB</color>
+    <color name="md_theme_dark_errorContainer">#93000A</color>
+    <color name="md_theme_dark_onError">#690005</color>
+    <color name="md_theme_dark_onErrorContainer">#FFDAD6</color>
+    <color name="md_theme_dark_background">#001F25</color>
+    <color name="md_theme_dark_onBackground">#A6EEFF</color>
+    <color name="md_theme_dark_surface">#001F25</color>
+    <color name="md_theme_dark_onSurface">#A6EEFF</color>
+    <color name="md_theme_dark_surfaceVariant">#414942</color>
+    <color name="md_theme_dark_onSurfaceVariant">#C0C9C0</color>
+    <color name="md_theme_dark_outline">#8A938B</color>
+    <color name="md_theme_dark_inverseOnSurface">#001F25</color>
+    <color name="md_theme_dark_inverseSurface">#A6EEFF</color>
+    <color name="md_theme_dark_inversePrimary">#006D3F</color>
+    <color name="md_theme_dark_shadow">#000000</color>
+    <color name="md_theme_dark_surfaceTint">#79DA9F</color>
+    <color name="md_theme_dark_outlineVariant">#414942</color>
+    <color name="md_theme_dark_scrim">#000000</color>
 </resources>
