--- a/feature/navigation/src/main/res/layout/fragment_navigation.xml
+++ b/feature/navigation/src/main/res/layout/fragment_navigation.xml
@@ -21,31 +21,26 @@
         <com.google.android.material.appbar.CollapsingToolbarLayout
             android:id="@+id/toolbarLayout"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="match_parent"
             app:layout_scrollFlags="scroll|snap"
             app:titleEnabled="false"
             app:toolbarId="@id/toolbar">
 
             <com.google.android.material.appbar.MaterialToolbar
                 android:id="@+id/toolbar"
-                style="@style/Widget.MaterialComponents.Toolbar.Primary"
+                style="@style/Widget.MaterialComponents.Toolbar.PrimarySurface"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                app:contentInsetStart="0dp"
                 app:layout_collapseMode="parallax"
-                app:titleMarginStart="16dp"
-                app:titleTextAppearance="?attr/textAppearanceHeadline5"
-                app:titleTextColor="@color/sunflower_white" />
+                app:titleTextAppearance="?attr/textAppearanceHeadline5"/>
 
         </com.google.android.material.appbar.CollapsingToolbarLayout>
 
         <com.google.android.material.tabs.TabLayout
             android:id="@+id/tabLayout"
-            style="@style/Widget.MaterialComponents.TabLayout.Colored"
             android:layout_width="match_parent"
-            android:layout_height="?attr/actionBarSize"
-            app:tabIconTint="@drawable/tab_icon_color_selector"
-            app:tabTextColor="?attr/colorPrimaryDark" />
+            android:layout_height="wrap_content"
+            app:tabIndicatorFullWidth="true" />
 
     </com.google.android.material.appbar.AppBarLayout>
 
