--- a/feature/plant_list/src/main/res/layout/item_plant.xml
+++ b/feature/plant_list/src/main/res/layout/item_plant.xml
@@ -29,6 +29,8 @@
             android:id="@+id/textView_title"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
+            android:layout_marginEnd="@dimen/margin_normal"
+            android:layout_marginStart="@dimen/margin_normal"
             android:layout_marginTop="@dimen/margin_normal"
             android:layout_marginBottom="@dimen/margin_normal"
             android:gravity="center_horizontal"
