--- a/core/sunflower_clone_ui/src/main/res/values/dimens.xml
+++ b/core/sunflower_clone_ui/src/main/res/values/dimens.xml
@@ -8,4 +8,7 @@
     <dimen name="plantItemCornerRadius">12dp</dimen>
     <dimen name="plantItemElevation">2dp</dimen>
     <dimen name="plantItemImageHeight">96dp</dimen>
+    <dimen name="textSizeLarge">16sp</dimen>
+    <dimen name="textSizeNormal">14sp</dimen>
+    <dimen name="textSizeSmall">12sp</dimen>
 </resources>
