--- a/feature/plant_details/src/main/res/layout/fragment_plant_details.xml
+++ b/feature/plant_details/src/main/res/layout/fragment_plant_details.xml
@@ -73,7 +73,8 @@
                 android:clickable="true"
                 android:focusable="true"
                 android:gravity="center_horizontal"
-                android:textAppearance="?attr/textAppearanceHeadline5"
+                android:textSize="?attr/dimenTextSizeLarge"
+                android:textStyle="bold"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
@@ -121,7 +122,6 @@
 
             <TextView
                 android:id="@+id/textView_description"
-                style="?android:attr/textAppearanceMedium"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="?attr/dimenMarginSmall"
