--- a/feature/navigation/src/main/res/layout/fragment_navigation.xml
+++ b/feature/navigation/src/main/res/layout/fragment_navigation.xml
@@ -22,17 +22,16 @@
             android:id="@+id/toolbarLayout"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            app:layout_scrollFlags="scroll|snap"
+            app:layout_scrollFlags="scroll|enterAlways"
             app:titleEnabled="false"
             app:toolbarId="@id/toolbar">
 
             <com.google.android.material.appbar.MaterialToolbar
                 android:id="@+id/toolbar"
-                style="@style/Widget.MaterialComponents.Toolbar.PrimarySurface"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                app:layout_collapseMode="parallax"
-                app:titleTextAppearance="?attr/textAppearanceHeadline5"/>
+                style="@style/Widget.SunflowerClone.Toolbar.Normal"
+                app:layout_collapseMode="parallax" />
 
         </com.google.android.material.appbar.CollapsingToolbarLayout>
 
