--- a/feature/plant_list/src/main/res/layout/fragment_plant_list.xml
+++ b/feature/plant_list/src/main/res/layout/fragment_plant_list.xml
@@ -4,7 +4,7 @@
     android:id="@+id/recyclerView"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    style="@style/Widget.SunflowerClone.PlantList.RecyclerView"
+    style="@style/Widget.SunflowerClone.RecyclerView.PlantList"
     tools:listitem="@layout/item_plant" />
 
 
