--- a/feature/plant_list/src/main/res/layout/item_plant.xml
+++ b/feature/plant_list/src/main/res/layout/item_plant.xml
@@ -2,7 +2,7 @@
 <com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    style="@style/Widget.SunflowerClone.PlantItem.Card"
+    style="@style/Widget.SunflowerClone.Card.PlantItem"
     android:layout_width="match_parent"
     android:layout_height="wrap_content">
 
@@ -14,7 +14,7 @@
             android:id="@+id/imageView_plant"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            style="@style/Widget.SunflowerClone.PlantItem.ImageView"
+            style="@style/Widget.SunflowerClone.ImageView.PlantItem"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
@@ -24,11 +24,13 @@
             android:id="@+id/textView_title"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            style="@style/Widget.SunflowerClone.PlantItem.TextView.Title"
-            android:layout_marginEnd="?attr/dimenMarginNormal"
-            android:layout_marginStart="?attr/dimenMarginNormal"
-            android:layout_marginTop="?attr/dimenMarginNormal"
-            android:layout_marginBottom="?attr/dimenMarginNormal"
+            android:layout_marginStart="@dimen/marginNormal"
+            android:layout_marginTop="@dimen/marginNormal"
+            android:layout_marginEnd="@dimen/marginNormal"
+            android:layout_marginBottom="@dimen/marginNormal"
+            android:gravity="center_horizontal"
+            android:textSize="?attr/dimenTextSizeLarge"
+            android:textStyle="bold"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
