--- a/core/sunflower_clone_ui/src/main/res/values/theme_sunflower_clone.xml
+++ b/core/sunflower_clone_ui/src/main/res/values/theme_sunflower_clone.xml
@@ -3,6 +3,7 @@
     <style name="Theme.SunflowerClone" parent="Theme.Material3.Light.NoActionBar">
         <item name="android:textSize">?attr/dimenTextSizeNormal</item>
         <item name="dimenFabBottomPadding">@dimen/fabBottomPadding</item>
+        <item name="dimenFabCornerRadius">@dimen/fabCornerRadius</item>
         <item name="dimenMarginLarge">@dimen/marginLarge</item>
         <item name="dimenMarginNormal">@dimen/marginNormal</item>
         <item name="dimenMarginSmall">@dimen/marginSmall</item>
