--- a/core/sunflower_clone_ui/src/main/res/values/attrs_sunflower_clone.xml
+++ b/core/sunflower_clone_ui/src/main/res/values/attrs_sunflower_clone.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?><!-- We don't need to define colors here because they are already included by Material 3.-->
 <resources>
+    <attr name="colorScrim" format="color"/>
     <attr name="dimenFabBottomPadding" format="dimension" />
     <attr name="dimenFabCornerRadius" format="dimension" />
     <attr name="dimenMarginLarge" format="dimension" />
